--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -16,6 +16,10 @@ body {
     align-content: flex-start;
 }
 
+.img-div {
+
+}
+
 .historic-images-disappear {
     opacity: 0.1;
 }
@@ -29,10 +33,12 @@ body {
 
 .cb-image {
     object-fit: cover;
-    min-height: 20vh;
-    max-height: 20vh;
-    min-width: 33vw;
-    max-width: 33vw;    
+    min-width: 30vw;
+    max-width: 30vw;
+    min-height: 30vw;
+    max-height: 30vw;
+    border-radius: 1rem 0;
+
 }
 
 .cb-image:hover {
@@ -49,7 +55,7 @@ body {
 
 .zoom-div {
     display: none;
-    margin: 20svh auto 0 auto;
+    margin: 15svh auto 0 auto;
     min-height: fit-content;
     max-width: 100vw;
     position: sticky;
@@ -67,25 +73,39 @@ body {
 @media screen and (min-width: 700px) {  
 
     .historic-images {
-        grid-template-columns: repeat(2, 1fr);
-        margin: 5vh 10vw;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 5vh;
         justify-content: center;
         gap: 1vh;
     }
-    .cb-image {
+    /* .cb-image {
         min-height: 40vh;
         max-height: 40vh;
         min-width: 20vw;
-        max-width: 20vw;    
+        max-width: 30vw;    
+    } */
+    .historic-images h4 {
+        grid-column: span 3;
+    }
+    .zoom-div img{
+        margin: 0 auto;
+        max-height: 80vh;
+        max-width: 80vw;
+    }
+}
+
+@media screen and (min-width: 1100px) { 
+    .historic-images {
+        grid-template-columns: repeat(4, 1fr);
     }
     .historic-images h4 {
         grid-column: span 4;
     }
-    .zoom-div img{
-        margin:0 auto;
-        min-height: fit-content;
-        max-height: 70vh;
-        max-width: 35vw;
-        height: 100%;
+    .cb-image {
+        min-width: 25vw;
+        max-width: 25vw;
+        min-height: 25vw;
+        max-height: 25vw;   
     }
-}
+
+ }
