--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -121,23 +121,6 @@
    cursor: pointer;
 }
 
-
-
-.popUpTerms {
-    display: none;
-}
-
-.popUpTermsClicked {
-    display: grid;
-    background-color: var(--black);
-    color: var(--white);
-    min-height: 100lvh;
-    min-width: 100lvw;
-    top: 0;
-    position: fixed;
-    z-index: 99;
-}
-
 @media screen and (max-width: 350px) {
 
     .media-and-contacts {
@@ -179,6 +162,8 @@
         display: flex;
         justify-content: space-around;
         grid-column: span 3;
+        /* margin: 0 auto; */
+        justify-content: center;
     }
 
     .footer-end a {
