--- a/stylesheet/bottomMenu.css
+++ b/stylesheet/bottomMenu.css
@@ -8,7 +8,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 0.5rem 0;
-    background-color: var(--white);
+    background-color: rgb(239, 227, 194);
     min-width: 100vw;
     max-width: 100vw;
     max-height: 6svh;
