--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -17,7 +17,7 @@
     --gray: rgba(0,0,0,0.5);
     --black-hover-img: rgba(0,0,0,0.6);
     --green-hover-img: rgb(136, 171, 142, 0.3);
-    --background-color: rgb(239, 227, 194)
+    --background-color: rgb(62, 123, 39);
 }
 
 .dark-theme {
@@ -38,7 +38,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: var(--white);
+    background-color: rgb(239, 227, 194);
     min-width: 100vw;
     max-width: 100vw;
     min-height: 9lvh;
