--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -17,7 +17,7 @@
     --gray: rgba(0,0,0,0.5);
     --black-hover-img: rgba(0,0,0,0.6);
     --green-hover-img: rgb(136, 171, 142, 0.3);
-    --background-color: rgb(198, 231, 255);
+    --background-color: rgba(198, 231, 255, 0.5)
 }
 
 .dark-theme {
