--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -8,7 +8,7 @@
     --green: rgb(136, 171, 142, 1);
     --green-one: rgb(175, 200, 173, 1);
     --yellow: rgb(238, 199, 89, 1);
-    --orange: rgba(238, 147, 34, 1);
+    --orange: rgb(231, 160, 72);
     --orange-two: rgba(238, 147, 34, 0.3);
     --red: rgba(216, 63, 49, 1);
     --white: rgb(245, 245, 245, 1);
@@ -17,7 +17,8 @@
     --gray: rgba(0,0,0,0.5);
     --black-hover-img: rgba(0,0,0,0.6);
     --green-hover-img: rgb(136, 171, 142, 0.3);
-    --background-color: rgba(198, 231, 255, 0.5)
+    --background-color: rgba(198, 231, 255, 0.5);
+    --pastel: rgb(239, 227, 194);
 }
 
 .dark-theme {
@@ -38,7 +39,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgb(239, 227, 194);
+    background-color: var(--pastel);
     min-width: 100vw;
     max-width: 100vw;
     min-height: 9lvh;
@@ -182,7 +183,7 @@ header {
 
 header .menu-list a li {
     list-style: none;
-    background-color: var(--white);
+    background-color: var(--pastel);
     color: var(--green);
     min-width: 100%;
     text-align: center;
