work on sabaoNatural javaScript code add added new features
now sabaoNatural items are selected all in the same div.
changed html structure.

At carrinho added message to clearify that items weight could not be precised.

added to terms and conditions that too.

--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -197,6 +197,21 @@
     font-size: 0.7rem;
 }
 
+.priceAlert {
+    /* position: sticky; */
+    bottom: 4rem;
+    text-align: center;
+    margin: 1.5rem;
+    padding: 1rem;
+    font-weight: bold;
+    background-color: var(--orange);
+    color: var(--black);
+    max-width: fit-content;
+    border-radius: 1rem 0;
+    font-size: 0.7rem;
+    display: none;
+}
+
 .final-price {
     font-size: 1rem;
 }
