--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -20,7 +20,7 @@
     gap: 3vw;
     grid-template-columns: repeat(1, 1fr);
     max-width: 100vw;
-    padding: 10vh 3lvw;
+    padding: 10vh 4lvw;
     justify-content: center;
     /* border: solid red 1px; */
     /* background-color: var(--black); */
@@ -37,6 +37,13 @@
     padding: 0.5rem;
     letter-spacing: 0.2rem;
     border-radius: 1rem 0;
+}
+
+.ovos .description {
+    color: var(--green);
+    text-align: center;
+    align-content: center;
+    font-size: 1rem;
 }
 
 .boxItem {
