added 'ver mais...' and scrollLeft on Home Page
added 'ver mais...' buttons on home page text because could be extensive for users,

added scrollLeft on welcomeSection because on small devices that images don't apeears at first time, and now after a few seconds the users could see more images about horta d'Ria

Also change he color of clients names on testimonials sections because the color didn't look good

--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -69,7 +69,27 @@
     padding: 0.5rem 0.2rem;
 }
 
+.see-more-button button {
+    color: var(--orange);
+    background-color: transparent;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+    font-style: italic;
+}
+
+.description-hidden {
+    display: none;
+}
+
 @media screen and (min-width: 700px) {
+    .see-more-button button {
+        display: none;
+    }
+
+    .description-hidden {
+        display: block;
+    }
 
     .welcome {
         display: flex;
