--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -9,15 +9,11 @@ body {
 .historic-images {
     min-height: 80vh;
     max-width: 100vw;
-    margin: 12vh auto;
+    margin: 10vh auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    align-content: flex-start;
-}
-
-.img-div {
-
+    /* justify-items: center; */
+    /* align-content: flex-start; */
 }
 
 .historic-images-disappear {
@@ -33,11 +29,11 @@ body {
 
 .cb-image {
     object-fit: cover;
-    min-width: 30vw;
-    max-width: 30vw;
-    min-height: 30vw;
-    max-height: 30vw;
-    border-radius: 1rem 0;
+    min-width: 33.3vw;
+    max-width: 33.3vw;
+    min-height: 33.3vw;
+    max-height: 33.3vw;
+    border-radius: 0.5rem;
 
 }
 
@@ -48,7 +44,9 @@ body {
 .zoom-image {
     object-fit: contain;
     height: 100%;
-    width: 100%;
+    width: 90%;
+    margin: auto 5vw;
+    border-radius: 0.5rem;
     /* z-index: 5; */
     /* transform-origin: center; */
 }
@@ -62,7 +60,7 @@ body {
     z-index: 2;
 }
 
-.test-show {
+.show-image{
     display: flex;
 }
 
