--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -1,3 +1,6 @@
+
+
+
 .display-none {
     display: none;
 }
@@ -55,7 +58,7 @@
     align-items: center;
     text-align: center;
     /* max-height: 50vh; */
-    max-height: fit-content;
+    max-height: max-content;
     min-height: 50vh;
     /* max-width: 80lvw; */
     gap: 0.3rem;
@@ -152,6 +155,8 @@
 .displayNone {
    display: none;
 }
+
+/* Media Queries */
 
 @media screen and (min-width: 700px) {
 
