--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -200,7 +200,8 @@
 
 .title-div {
     font-weight: bold;
-    margin: 5vh 0 0 0;
+    /* margin: 5vh 0 0 0; */
+    margin: 0;
     max-width: 100%;
     padding: 3vh;
     color: var(--orange);
