--- a/stylesheet/bottomMenu.css
+++ b/stylesheet/bottomMenu.css
@@ -4,21 +4,22 @@
     left: 0;
     z-index: 10;
     display: flex;
-    font-size: 1.5rem;
+    font-size: 1rem;
     justify-content: space-around;
     align-items: center;
-    padding: 0.5rem 0;
-    background-color: var(--pastel);
+    padding: 0.5rem;
+    background-color: var(--green);
     min-width: 100vw;
     max-width: 100vw;
-    max-height: 6svh;
+    min-height: fit-content;
+    border-top: solid 2px var(--white);
     /* background-image: linear-gradient(to right, var(--green), var(--black)); */
     /* display: none; */
 
 }
 
 .bottom-menu div i {
-    color: var(--green);
+    color: var(--white);
 }
 
 @media screen and (min-width: 700px) {
