--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -459,6 +459,7 @@ select {
     font-weight: bold;
     color: var(--orange);
     text-align: center;
+    margin-bottom: 5vh;
 }
 
 @media screen and (min-width: 700px) {
