--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -37,23 +37,28 @@
 body {
     position: relative;
     background-color: var(--background-color);
+    overflow-x: hidden;
 }
 
 header {
-    background: var(--white);
-    /* background-image: linear-gradient(90deg, var(--green), var(--black)); */
-    position: fixed;
+    background: var(--green);
+    position: initial;
     top: 0;
     left: 0;
-    background-color: var(--pastel);
     min-width: 100vw;
     max-width: 100vw;
-    min-height: 9lvh;
-    /* max-height: 10svh; */
+    min-height: 10lvh;
     z-index: 99;
     padding: auto;
     display: grid;
-    /* display: none; */
+    overflow-x: hidden;
+}
+
+.change-header-overflow-x {
+    position: fixed;
+    overflow-x: initial;
+    transition: 1000ms;
+
 }
 /* NAVBAR */
 .navbar {
@@ -66,7 +71,8 @@ header {
 }
 
 .logo-img-div {
-    display: grid;
+    /* display: grid; */
+    display: flex;
     align-items: center;
     padding: 0.2rem;
     max-height: 100%;
@@ -78,16 +84,26 @@ header {
     max-height: 7svh;
 }
 
+.logo-img-div h1 {
+    color: var(--white);
+    /* z-index: 100; */
+    background-color: transparent;
+    text-transform: uppercase;
+}
+
+.logo-img-div a  {
+    text-decoration: none;
+}
+
 /* ===============MESSAGE WHEN ORDER ARE DISABLE============================ */
-.disable-orders {
+/* .disable-orders {
     color: var(--orange);
-    /* background-color: var(--black); */
     padding: 0.5rem;
     border-radius: 0.5rem;
     max-width: fit-content;
     animation: pulse 2s 1s infinite;
     display: none;
-}
+} */
 
 /* =======div with cart and hamburguer menu============= */
 
@@ -149,13 +165,15 @@ header {
     position: relative;
     /* border: 1px solid var(--yellow); */
     max-height: max-content;
+    display: flex;
+    align-items: center;
 }
 
 .cart-div .fa-basket-shopping,
 .fa-magnifying-glass,
 .fa-bars-staggered,
 .fa-x {
-    color: var(--green);
+    color: var(--white);
     font-size: 1rem;
     min-height: 100%;
     width: min-content;
@@ -166,21 +184,25 @@ header {
 /* =========================================== */
 .menu-list {
     position: absolute;
-    top: 9svh;
+    top: 10lvh;
+    bottom: 0;
     min-width: 100lvw;
     min-height: 100lvh;
-    right: -100dvw;
-    transition: 1000ms;
+    opacity: 0;
+    transition: 1200ms;
+    z-index: -1;
 }
 
 .show {
-    right: 0;
+    opacity: 1;
+    transition: 1200ms;
+    z-index: 100;
 }
 
 header .menu-list a li {
     list-style: none;
-    background-color: var(--pastel);
-    color: var(--green);
+    background-color: var(--green);
+    color: var(--white);
     min-width: 100%;
     text-align: center;
     padding: 1rem;
@@ -188,7 +210,7 @@ header .menu-list a li {
     cursor: pointer;
     outline: none;
     border: none;
-    border-bottom: var(--orange) solid 1px;
+    border-bottom: var(--orange) solid 2px;
     font-size: 1.2rem;
 }
 
@@ -246,15 +268,17 @@ header .menu-list a li:hover {
 }
 
 .welcomeSection {
-    margin: 9svh 0 0 0;
+    margin: 0;
     display: flex;
-    overflow-x: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    max-width: 100vw;
     position: relative;
 }
 
 .welcomeSection .title-div {
-    min-width: 98vw;
-    max-width: 98vw;
+    min-width: 100vw;
+    max-width: 100vw;
     min-height: 90svh;
     max-height: 90svh;
     display: flex;
@@ -326,13 +350,13 @@ body::-webkit-scrollbar:vertical {
 }
 
 .article-number {
-    border-radius: 40%;
+    border-radius: 1rem;
     background-color: var(--orange);
     color: var(--white);
-    padding: 0.2rem 0.3rem;
-    position: absolute;
-    top: 0.7rem;
-    left: 0.7rem;
+    padding: 0.4rem;
+    /* position: absolute;
+    top: -0.2rem;
+    left: 1rem; */
     font-weight: bold;
     font-size: 0.9rem;
 }
@@ -348,8 +372,10 @@ body::-webkit-scrollbar:vertical {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        min-height: 12svh;
-        background-color: var(--white);
+        /* min-height: 12svh; */
+        min-height: fit-content;
+        background-color: var(--white-two);
+
     }
 
     .fa-bars-staggered,
@@ -374,6 +400,11 @@ body::-webkit-scrollbar:vertical {
     .logo-img {
         max-height: 10lvh;
         cursor: pointer;
+    }
+
+    .logo-img-div h1 {
+        color: var(--green);
+        font-size: 2rem;
     }
 
     .menu-list {
