--- a/stylesheet/produtos.css
+++ b/stylesheet/produtos.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     max-width: 100vw;
     margin-bottom: 10vh;
-   
+    margin-top: 0;
 }
 
 .all-products .title-div {
@@ -16,7 +16,7 @@ body {
     color: var(--white);
     border: none;
     outline: none;
-    margin: 7vh 0;
+    /* margin: 7vh 0; */
 }
 
 .all-products div:not(.title-div) {
