--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -47,9 +47,9 @@ header {
     left: 0;
     min-width: 100vw;
     max-width: 100vw;
-    min-height: 10lvh;
+    /* min-height: 10lvh; */
     z-index: 99;
-    padding: auto;
+    padding: 0.5rem 0;
     display: grid;
     overflow-x: hidden;
 }
