updated opacity and z-index of menu list in header

--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -417,7 +417,8 @@ body::-webkit-scrollbar:vertical {
         margin: 0 2vw;
         padding: 0.3rem;
         background-color: transparent;
-        /* z-index: 100; */
+        opacity: 1;
+        z-index: 100;;
     }
 
     header .menu-list a li {
