--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -3,7 +3,6 @@
     gap: 3vh;
     background-color: var(--green);
     /* background: linear-gradient(to top, var(--black), var(--green)); */
-
     margin-bottom: 5vh;
     border-radius: 5rem 0 0 0;
 }
@@ -156,16 +155,16 @@
         grid-template-columns: repeat(4, 1fr);
     }
 
-    .footer-head h4 {
+    .media-and-contacts .footer-head h4 {
         grid-column-start: 2;
         grid-column: span 3;
     }
 
-    .footer-end {
+    .media-and-contacts .footer-end {
         display: flex;
         justify-content: space-around;
         grid-column: span 3;
-        /* margin: 0 auto; */
+        margin: 0 auto;
         justify-content: center;
     }
 
