--- a/stylesheet/produtos.css
+++ b/stylesheet/produtos.css
@@ -5,6 +5,9 @@ body {
 
 .all-products {
     display: grid;
+    gap: 1rem;
+    padding: 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     max-width: 100vw;
     margin-bottom: 10vh;
@@ -12,38 +15,52 @@ body {
 }
 
 .all-products .title-div {
-    background-color: var(--green-one);
+    background-color: var(--green);
     color: var(--white);
     border: none;
     outline: none;
+    grid-column: span 2;
     /* margin: 7vh 0; */
 }
 
 .all-products div:not(.title-div) {
     text-align: center;
     padding: 0.5rem;
-} 
+}
+
+.all-products div {
+    display: grid;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    border-radius: 1rem;
+    background-color: var(--white);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+}
 
 .all-products img {
-    object-fit: contain;
-    max-width: 35vw;
+    object-fit: cover;
+    max-width: 100%;
+    min-height: 45lvh;
+    max-height: 45lvh;
     border-radius: 1rem;
     transition: 1s;
 }
 
 .all-products a {
     text-decoration: none;
-
 }
 
 .all-products a p {
     max-width: 75dvw;
     border: solid var(--orange) 2px;
-    border-radius: 1rem 0;
+    border-radius: 1rem;
     color: var(--white);
-    background-color: var(--green-one);
+    background-color: var(--green);
     outline: none;
-    padding: 1rem;
+    padding: 0.1rem;
     margin: auto;
     font-weight: bold;
     text-transform: uppercase;
@@ -71,7 +88,7 @@ body {
         grid-template-columns: repeat(4, 1fr);
         margin: 5vh 15vw;
         justify-content: center;
-        gap: 0;
+        gap: 2rem;
     }
 
     .all-products .title-div {
@@ -81,11 +98,19 @@ body {
         max-width: 100vw;
     }
 
+    .all-products div {
+        gap: 1.5rem;
+    }
+
+    .all-products img {
+        object-fit: cover;
+        max-width: 100%;
+        min-height: 50lvh;
+        max-height: 50lvh;
+    }
+
     .all-products a p{
-        min-height: 20vh;
         text-align: center;
-        color: var(--white);
-        background-color: var(--green);
     }
 
     .all-products div a p:hover {
