--- a/stylesheet/popUp.css
+++ b/stylesheet/popUp.css
@@ -1,55 +1,66 @@
-dialog {
-    position: fixed;
-    bottom: 0;
+/* dialog {
     min-width: 100lvw;
-    min-height: 25lvh;
-    max-height: 25lvh;
+    min-height: fit-content;
     background-color: var(--black-hover-img);
     border: none;
-    display: none;
-    z-index: -10;
-}
+    position: relative;
+    bottom: 0;
+    left: 0;
+} */
 
 .pop-up-encomendas {
+    display: none;
+}
+
+.pop-up-encomendas div {
+    width: 100%;
+    height: 100%;	
+}
+
+.pop-up-encomendas-opened {
+    opacity: 0.8;
+    z-index: 20;
+    position: fixed;
+    bottom: 0;
     text-align: center;
     display: grid;
     justify-content: center;
     align-items: center;
     background-color: var(--black); 
-    border-radius: 1rem;
-    min-height: 70lvh;
-    margin: 15% auto;
+    padding: 1rem 0;
+    min-width: 100vw;
 }
 
-.close-pop-up {
+.close-pop-up-button {
+    float: right;
     color: var(--white);
     border-radius: 40%;
     font-weight: bold;
     border: none;
     outline: none;
-    font-size: 2rem;
+    font-size: 1rem;
     text-align: end;
     margin-right: 2rem;
     cursor: pointer;
 }
 
-.close-pop-up:hover {
+.close-pop-up-button:hover {
     color: var(--orange);
     transition: 0.5s;
 }
 
 .pop-up-mensagem {
     color: var(--white);
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: bold;
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 2rem;
-    background-color: var(--orange);
+    gap: 0.5rem;
+    /* background-color: var(--orange); */
     width: 100%;
-    padding: 2rem;
+    padding: 0.5rem;
 }
 
 .pop-up-buttons {
@@ -91,12 +102,4 @@ dialog {
     color: var(--green);
     background-color: var(--black);
     transition: 0.5s;
-}
-
-@media screen and (min-width: 1100px) {
-
-    .pop-up-encomendas {
-        min-width: 50vw;
-        min-height: 50vh;
-    }
 }
