--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -141,7 +141,7 @@
      .media-and-contacts {
         grid-template-columns: repeat(3, 1fr);
         margin-bottom: 0;
-        min-width: 100vw;
+        max-width: 100vw;
         max-width: 100vw;
     }
 
@@ -194,6 +194,7 @@
 
     .social-media {
         margin: 0 auto;
+        padding: 1vw;
     }
 
     .info-tel span:nth-child(2) {
