--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -111,19 +111,19 @@
         font-size: 1.5rem;
         max-width: 100vw;
         text-align: center;
-        grid-template-columns: repeat(2, 1fr);
-        justify-items: center;
+        /* grid-template-columns: repeat(2, 1fr); */
+        /* justify-items: center;
         align-items: center;
         gap: 0;
-        margin: 5vh auto;
+        margin: 5vh auto; */
     }
 
     .about-us-photo {
-        max-width: 40vw;
+        max-width: 75vw;
     }
 
     .about-us-photo img{
-        max-width: 40vw;
+        max-width: 100%;
         max-height: 100lvh;
         object-fit: cover;
     }
