--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -188,8 +188,8 @@
 .boxItem img {
     min-height: 30vh;
     max-height: 30vh;
-    min-width: 30vh;
-    max-width: 30vh;
+    min-width: 30vw;
+    max-width: 30vw;
 }
 
 .boxItem h3 {
@@ -255,5 +255,12 @@ select option {
 
     .section-title {
         grid-column: span 4;
+    }
+
+  .boxItem img {
+    min-height: 20vw;
+    max-height: 20vw;
+    min-width: 20vw;
+    max-width: 20vw;
     }
 }
