--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -239,33 +239,62 @@ header .menu-list a li:hover {
 
 /* SEARCH BAR */
 .searchBar-div{
-    /* border: 1px solid var(--yellow); */
-    border-radius: 2rem;
+    /* background-color: var(--green-hover-img); */
+    display: none;
     background-color: var(--green);
-    min-height: 10vh;
-    max-width: 90vw;
-    margin: 12vh auto 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 1rem;
-    max-width: 70svw;
+    min-height: 100vh;
+    max-width: 100vw;
+    margin: 0 auto;
+    align-content: flex-start;
+    gap: 1rem;
+    justify-items: center;
+    padding: 20vh 10vw;
+    z-index: 100;
+    position: fixed;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: scroll;
+}
 
+.close-searchbar {
+    position: absolute;
+    margin-top: 2rem;
+    right: 2rem;
+    font-size: 1.5rem;
+    color: var(--white);
+    transition: 500ms;
+
+}
+
+.close-searchbar:hover {
+    color: var(--orange);
+    cursor: pointer;
+}
+
+.searchbar-button {
+    max-width: fit-content;
+    margin: 0 auto;
+    padding: 0.5rem 1rem;
+    border: var(--orange) 0.1rem solid;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--green);
+    background-color: var(--white);
 }
 
 .searchBarInput {
     min-width: 80%;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     border: var(--orange) 0.1rem solid;
     border-radius: 0.5rem;
-    padding: 0.2rem 0.2rem 0.2rem 0.5rem;
+    padding: 0.2rem 0.5rem;
+    color: var(--green);
 }
 
-.fa-magnifying-glass {
-    background-color: var(--yellow);
-    padding: 0.3rem;
-    border-radius: 50%;
-}
+/* WELCOME SECTION */
 
 .welcomeSection {
     margin: 0;
@@ -379,10 +408,22 @@ body::-webkit-scrollbar:vertical {
 
     .fa-bars-staggered,
     .fa-x,
-    .openMenu,
+    .openMenu,s
     .openMenu::before,
     .openMenu::after {
         display: none;
+    }
+
+    /* SEARCH BAR  */
+
+    .fa-magnifying-glass {
+        color: var(--green);
+        transition: 500ms;
+    }
+
+    .fa-magnifying-glass:hover {
+        color: var(--orange);
+        transition: 500ms;
     }
 
     .navbar {
