--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -141,6 +141,12 @@
     margin: 0 10dvw;
 }
 
+.contactForm div input,
+.contactForm div textarea {
+    font-size: 1rem;
+    color: var(--black);
+}
+
 .btn-info:hover {
     cursor: pointer;
     background-color: var(--black);
