--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -2,18 +2,18 @@ body {
     margin: 0;
     padding: 0;
     position: relative;
-    /* background: linear-gradient(to bottom, var(--black), var(--green)); */
-
 }
 
 .historic-images {
-    min-height: 80vh;
-    max-width: 100vw;
-    margin: 10vh auto;
+    margin: 10vh 2rem;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    /* justify-items: center; */
-    /* align-content: flex-start; */
+    gap: 2rem;
+    grid-template-columns: repeat(1, 1fr);
+    overflow-x: hidden;
+}
+
+.historic-images::-webkit-scrollbar {
+    display: none;
 }
 
 .historic-images-disappear {
@@ -22,19 +22,20 @@ body {
 
 .historic-images h4 {
     grid-column: span 3;
-    margin: 5vw;
+    margin: 3vw;
     text-align: center;
     color: var(--green);
 }
 
+.img-div {
+    grid-column: span 3;
+}
+
 .cb-image {
     object-fit: cover;
-    min-width: 33.3vw;
-    max-width: 33.3vw;
-    min-height: 33.3vw;
-    max-height: 33.3vw;
+    max-width: 100%;
+    min-height: 100%;
     border-radius: 0.5rem;
-
 }
 
 .cb-image:hover {
@@ -46,9 +47,7 @@ body {
     height: 100%;
     width: 90%;
     margin: auto 5vw;
-    border-radius: 0.5rem;
-    /* z-index: 5; */
-    /* transform-origin: center; */
+    border-radius: 1rem;
 }
 
 .zoom-div {
@@ -72,38 +71,41 @@ body {
 
     .historic-images {
         grid-template-columns: repeat(3, 1fr);
-        margin: 5vh;
+        margin: 5vh 15vw;
         justify-content: center;
         gap: 1vh;
     }
-    /* .cb-image {
-        min-height: 40vh;
-        max-height: 40vh;
-        min-width: 20vw;
-        max-width: 30vw;    
-    } */
+
     .historic-images h4 {
         grid-column: span 3;
     }
-    .zoom-div img{
-        margin: 0 auto;
+
+    .zoom-div {
+        margin: 5rem auto;
         max-height: 80vh;
         max-width: 80vw;
+        border-radius: 1rem;
+    }
+
+    .zoom-image {
+        max-width: 100%;
+        max-height: 100%;
+        margin: 0 auto;
+    }
+
+    .img-div {
+    grid-column: span 1;
     }
 }
 
 @media screen and (min-width: 1100px) { 
     .historic-images {
         grid-template-columns: repeat(4, 1fr);
+        margin: 5vh 15vw;
     }
     .historic-images h4 {
         grid-column: span 4;
     }
-    .cb-image {
-        min-width: 25vw;
-        max-width: 25vw;
-        min-height: 25vw;
-        max-height: 25vw;   
-    }
+   
 
  }
