added 2 new items and make the update of the week
added new bag of alfazema

change some items stock value

change some items prices

--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -218,7 +218,7 @@
     margin: 0;
     max-width: 100%;
     padding: 3vh;
-    color: var(--orange);
+    color: var(--white);
     text-align: center;
 } 
 
