--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -89,6 +89,7 @@ header {
     /* z-index: 100; */
     background-color: transparent;
     text-transform: uppercase;
+    font-size: 1.2rem;
 }
 
 .logo-img-div a  {
