--- a/stylesheet/produtos.css
+++ b/stylesheet/produtos.css
@@ -25,7 +25,7 @@ body {
 
 .all-products div:not(.title-div) {
     text-align: center;
-    padding: 0.5rem;
+    padding: 1rem;
 }
 
 .all-products div {
@@ -42,9 +42,11 @@ body {
 
 .all-products img {
     object-fit: cover;
+    min-width: 100%;
     max-width: 100%;
-    min-height: 45lvh;
-    max-height: 45lvh;
+    min-height: 40lvh;
+    max-height: 40lvh;
+    height: auto;
     border-radius: 1rem;
     transition: 1s;
 }
@@ -60,7 +62,7 @@ body {
     color: var(--white);
     background-color: var(--green);
     outline: none;
-    padding: 0.1rem;
+    padding: 0.5rem;
     margin: auto;
     font-weight: bold;
     text-transform: uppercase;
