--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -218,7 +218,7 @@
     margin: 0;
     max-width: 100%;
     padding: 1.5vh;
-    color: var(--white);
+    color: var(--orange);
     text-align: center;
 } 
 
@@ -244,9 +244,6 @@
     /* .cabaz-menu .cabaz-4 {
         grid-column: span 1;
     }  */
-    .title-div h1 {
-        color: var(--white);
-    }
     
 }
 
