--- a/stylesheet/produtos.css
+++ b/stylesheet/produtos.css
@@ -14,13 +14,19 @@ body {
     margin-top: 0;
 }
 
-.all-products .title-div{
+.products-title{
     background-color: var(--green);
     color: var(--white);
     border: none;
     outline: none;
     grid-column: span 2;
     /* margin: 7vh 0; */
+      font-weight: bold;
+    /* margin: 5vh 0 0 0; */
+    margin: 0;
+    max-width: 100%;
+    padding: 1.5vh;
+    text-align: center;
 }
 
 .all-products div:not(.title-div) {
@@ -75,7 +81,7 @@ body {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .all-products .title-div {
+    .all-products .products-title {
         grid-column: span 2;
     }
 
@@ -92,7 +98,7 @@ body {
         gap: 2rem;
     }
 
-    .all-products .title-div {
+    .all-products .products-title {
         grid-column: span 4;
         margin: 8vh 0;
         text-align: center;
