--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -130,9 +130,9 @@
 
     .about-us-description p{
         color: var(--green);     
-        font-size: 1rem;   
-        text-align: center;
-
+        font-size: 1.2rem;   
+        text-align: justify;
+        padding: 0 10vw;
     }
 
     .about-us-description h3 {
