--- a/stylesheet/testemunhos.css
+++ b/stylesheet/testemunhos.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 3vh;
     margin: 10vh auto;
-    padding: 0 5dvw;
+    padding: 5dvw;
 }
 
 .testimonials-flex {
@@ -13,6 +13,21 @@
 
 .testimonials-flex::-webkit-scrollbar {
     display: none;
+}
+
+.testimonials .client-testimonial {
+    display: grid;
+    gap: 1vh;
+    max-height: fit-content;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    box-shadow: 0 4px 8px 0 var(--green-hover-img), 0 6px 20px 0 var(--green-hover-img);
+    padding: 1.5rem;
+    display: grid;
+    gap: 0.5rem;
+    margin: 0 3vw;
+    border-radius: 1rem;
+    min-width: 70lvw;
+
 }
 
 .testimonials .client-name {
@@ -29,7 +44,7 @@
     color: var(--green-one);
 }
 
-.testimonials > div:nth-child(odd) {
+/* .testimonials > div:nth-child(odd) {
     text-align: left;
     background-color: var(--green);
     color: var(--white);
@@ -38,9 +53,9 @@
 .testimonials > div:nth-child(even) {
     text-align: right;
     color: var(--green);
-}
+} */
 
-.testimonials > div:nth-child(odd), 
+/* .testimonials > div:nth-child(odd), 
 .testimonials > div:nth-child(even) {
     border: solid var(--green) 2px;
     padding: 1.5rem;
@@ -49,7 +64,7 @@
     margin: 0 3vw;
     border-radius: 1rem 0 1rem 0;
     min-width: 70lvw;
-}
+} */
 
 .testimonials .date-and-job {
     display: flex;
@@ -84,7 +99,6 @@
         gap: 5vh;
         justify-content: center;
         margin: 15dvh 3vw 20vh 3vw;
-        padding: 0;
     }
 
     .testimonials > div:nth-child(odd), 
