--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -41,7 +41,7 @@ body {
 }
 
 header {
-    position: absolute;
+    position: initial;
     top: 0;
     left: 0;
     min-width: 100vw;
@@ -83,7 +83,7 @@ header {
 }
 
 .logo-img-div h1 {
-    color: var(--white);
+    color: var(--green);
     /* z-index: 100; */
     background-color: transparent;
     text-transform: uppercase;
@@ -172,18 +172,28 @@ header {
 .fa-magnifying-glass,
 .fa-bars-staggered,
 .fa-x {
-    color: var(--white);
+    color: var(--green);
     font-size: 1rem;
     min-height: 100%;
     width: min-content;
     cursor: pointer;
 }
 
+.fa-x {
+    font-size: 1.5rem;
+    position: absolute;
+    color: var(--white);
+    top: 1rem;
+    right: 1rem;
+    z-index: 101;
+    transition: 500ms;
+}
+
 
 /* =========================================== */
 .menu-list {
     position: absolute;
-    top: 4rem;
+    top: 0;
     bottom: 0;
     min-width: 100lvw;
     min-height: 100lvh;
@@ -312,8 +322,8 @@ header .menu-list a li:hover {
 .welcomeSection .title-div {
     min-width: 100vw;
     max-width: 100vw;
-    min-height: 100svh;
-    max-height: 100svh;
+    min-height: 85svh;
+    max-height: 85svh;
     display: flex;
     align-items: center;
     justify-content: space-between;
