--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -186,6 +186,7 @@ header {
     right: 1rem;
     z-index: 101;
     transition: 500ms;
+
 }
 
 
@@ -420,7 +421,7 @@ body::-webkit-scrollbar:vertical {
 
     .fa-bars-staggered,
     .fa-x,
-    .openMenu,s
+    .openMenu,
     .openMenu::before,
     .openMenu::after {
         display: none;
