Atualizar o ervasECha.css

--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -61,8 +61,8 @@
     /* min-height: 40vh; */
     min-width: auto;
     gap: 0.3rem;
-    font-size: 1rem;
-    font-weight: 700;
+    /*font-size: 1rem;
+    font-weight: 700;*/
     border: solid var(--green-one) 2px;
     background-color: var(--white-two);
     border-radius: 0.5rem;
@@ -74,20 +74,21 @@
     text-transform: uppercase;
     color: var(--black);
     grid-column: span 2;
-    font-size: 0.7rem;
+    font-size: 1rem;
     font-weight: bold;
     letter-spacing: 0.1rem;
-    min-height: 2.6rem;
+    /*min-height: 2.6rem;*/
     max-width: 90%;
 }
 
 .boxItem img {
     grid-column: span 2;
     object-fit: cover;
-    min-height: 90%;
+    max-width: 100%
+    /*min-height: 90%;
     max-height: 90%;
     max-width: 90%;
-    min-width: 90%;
+    min-width: 90%;*/
     margin: 0 auto;
     border-radius: 0.5rem;
 }
