--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -57,9 +57,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    max-height: max-content;
     /* min-height: 40vh; */
-    min-width: auto;
     gap: 0.3rem;
     /*font-size: 1rem;
     font-weight: 700;*/
@@ -84,7 +82,7 @@
 .boxItem img {
     grid-column: span 2;
     object-fit: cover;
-    max-width: 100%
+    max-width: 100%;
     /*min-height: 90%;
     max-height: 90%;
     max-width: 90%;
