update of the week
added a new message to cabazes image

Until february is not allowed request products.

added a new <p> to index.html and a class on cabaz.css

Also change pop-up message

changed Date() to always be Sunday

Fix all this in February

--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -146,11 +146,22 @@
 .image-with-weekly-baskets {
     max-width: 95vw;
     min-height: 100lvh;
-    background-image: url("/images/fotosCabazes/cabazes-semana.jpg");
+    background-image: linear-gradient(to right,rgba(0,0,0,1), rgba(0,0,0,0.9)), url("/images/fotosCabazes/cabazes-semana.jpg") ;
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat;
     margin: 2rem auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* // Cabazes indisponiveis temporariamente */
+.cabazes-indisponiveis-temporariamente {
+    text-align: center;
+    color: red;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 .cabazes {
